--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="navtitre">
+        <h3>
+        START CSS
+        </h3>
+        </div>
+        <div class="ancre">
+           <a href=""> <p>Portfolio</p></a>
+           <a href=""> <p>About</p></a>
+           <a href=""> <p>Contact</p></a>
+        </div>
+    </nav>
+ 
 </body>
 </html>
