--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,17 @@
            <a href=""> <p>Contact</p></a>
         </div>
     </nav>
- 
+    <header>
+        <div>
+            <img src="./img/avataaars.svg" alt="">
+        </div>
+        <div>
+            <H1>START CSS</H1>
+        </div>
+        <div>
+            <p>Graphic Artist-Web Designer-Illustrator</p>
+        </div>
+     
+    </header>
 </body>
 </html>
