--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,17 @@
         <div>
             <p>Graphic Artist-Web Designer-Illustrator</p>
         </div>
-     
     </header>
+    <section class="portfolio">
+        <div class="p-titre"><H2>PORTFOLIO</H2></div>
+        <div class="images">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </section>
 </body>
 </html>
