--- a/index.htm
+++ b/index.htm
@@ -41,5 +41,30 @@
             <img src="/img/portfolio/submarine.png" alt="">
         </div>
     </section>
+    <section class="about">
+        <h1>About</h1>
+        <div class="container-text">
+            <div class="text">
+                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download include sthe complete source files including HTML,CSS and JavaScript as well as optionnal SASS stylesheets for easy customization.</p>
+            </div>
+            <div class="text">
+                <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <div>
+            <form action="type">
+                <input type="text" id="name" placeholder="Name"><br>
+                <input type="text" id="mail" placeholder="Email Address"><br>
+                <input type="text" id="num" placeholder="Phone Number"><br>
+                <input type="text" id="msg" placeholder="Message"><br>
+                <hr>
+                <input type="submit" value="Send">
+                
+            </form>
+        </div>
+
+    </section>
 </body>
 </html>
