--- a/index.htm
+++ b/index.htm
@@ -61,10 +61,34 @@
                 <input type="text" id="msg" placeholder="Message"><br>
                 <hr>
                 <input type="submit" value="Send">
-                
             </form>
         </div>
-
     </section>
+    <footer>
+        <div class="loc">
+            <h2>LOCATION</h2>
+            <div>
+
+        </div>
+    </div>
+    </footer>
+    <div class="Web">
+        <h2>AROUND THE WEB</h2>
+        <div class="logocontainer">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-dribbble"></i>
+        </div>
+    </div>
+    <div class="freelancer">
+        <h2>ABOUT FREELANCER</h2>
+        <div>
+            <p>Freelance is a free to use, MIT licensed Bootstrap theme create by <span class="btsrp">Start Bootstrap</span> .</p>
+        </div>
+    </div>
+
+
+    <script src="https://kit.fontawesome.com/928f848d89.js" crossorigin="anonymous"></script>
 </body>
 </html>
