--- a/index.htm
+++ b/index.htm
@@ -71,7 +71,7 @@
 
         </div>
     </div>
-    </footer>
+  
     <div class="Web">
         <h2>AROUND THE WEB</h2>
         <div class="logocontainer">
@@ -87,6 +87,8 @@
             <p>Freelance is a free to use, MIT licensed Bootstrap theme create by <span class="btsrp">Start Bootstrap</span> .</p>
         </div>
     </div>
+</footer>
+<p>Copyright &copy; Your Website 2020</p>
 
 
     <script src="https://kit.fontawesome.com/928f848d89.js" crossorigin="anonymous"></script>
