--- a/index.htm
+++ b/index.htm
@@ -14,9 +14,9 @@
         </h3>
         </div>
         <div class="ancre">
-           <a href=""> <p>Portfolio</p></a>
-           <a href=""> <p>About</p></a>
-           <a href=""> <p>Contact</p></a>
+           <a href="#portfolio"> <p>Portfolio</p></a>
+           <a href="#about"> <p>About</p></a>
+           <a href="#contact"> <p>Contact</p></a>
         </div>
     </nav>
     <header>
@@ -30,7 +30,7 @@
             <p>Graphic Artist-Web Designer-Illustrator</p>
         </div>
     </header>
-    <section class="portfolio">
+    <section id="portfolio">
         <div class="p-titre"><H2>PORTFOLIO</H2></div>
         <div class="images">
             <img src="/img/portfolio/cabin.png" alt="">
@@ -41,7 +41,7 @@
             <img src="/img/portfolio/submarine.png" alt="">
         </div>
     </section>
-    <section class="about">
+    <section id="about">
         <h1>About</h1>
         <div class="container-text">
             <div class="text">
@@ -52,7 +52,7 @@
             </div>
         </div>
     </section>
-    <section class="contact">
+    <section id="contact">
         <div>
             <form action="type">
                 <input type="text" id="name" placeholder="Name"><br>
