--- a/index.htm
+++ b/index.htm
@@ -21,12 +21,12 @@
     </nav>
     <header>
         <div>
-            <img src="./img/avataaars.svg" alt="">
+            <img class="mainlogo" src="./img/avataaars.svg" alt="">
         </div>
-        <div>
+        <div class="h1">
             <H1>START CSS</H1>
         </div>
-        <div>
+        <div class="renom">
             <p>Graphic Artist-Web Designer-Illustrator</p>
         </div>
     </header>
