--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@
         </div>
     </section>
     <section id="about">
-        <h1>About</h1>
+        <h1>ABOUT</h1>
         <div class="container-text">
             <div class="text">
                 <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download include sthe complete source files including HTML,CSS and JavaScript as well as optionnal SASS stylesheets for easy customization.</p>
