--- a/index.htm
+++ b/index.htm
@@ -55,14 +55,14 @@
         </div>
     </section>
     <section id="contact">
-        <div>
+        <H1>CONTACT ME</H1>
+        <div class="contact">
             <form action="type">
                 <input type="text" id="name" placeholder="Name"><br>
                 <input type="text" id="mail" placeholder="Email Address"><br>
                 <input type="text" id="num" placeholder="Phone Number"><br>
-                <input type="text" id="msg" placeholder="Message"><br>
-                <hr>
-                <input type="submit" value="Send">
+                <textarea cols="30" rows="5" class="input_contact" placeholder="Message"></textarea><br>
+                <input type="submit" value="Send" class="btn">
             </form>
         </div>
     </section>
