--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,7 @@
                 <input type="text" id="name" placeholder="Name"><br>
                 <input type="text" id="mail" placeholder="Email Address"><br>
                 <input type="text" id="num" placeholder="Phone Number"><br>
-                <textarea cols="30" rows="5" class="input_contact" placeholder="Message"></textarea><br>
+                <textarea cols="30" rows="8" class="input_contact" placeholder="Message"></textarea><br>
                 <input type="submit" value="Send" class="btn">
             </form>
         </div>
@@ -70,17 +70,18 @@
         <div class="loc">
             <h2>LOCATION</h2>
             <div>
-
+                <p>2215 John Daniel Drive</p>
+                   <p>Clark, MO 65243</p>
         </div>
     </div>
   
     <div class="Web">
-        <h2>AROUND THE WEB</h2>
+        <h2 class="ttl">AROUND THE WEB</h2>
         <div class="logocontainer">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
-            <i class="fa-brands fa-dribbble"></i>
+            <a href="https://www.facebook.com/?locale=fr_FR"> <i class="fa-brands fa-facebook-f"></i></a>
+             <a href="https://x.com/"><i class="fa-brands fa-twitter"></i></a>
+             <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+             <a href="https://dribbble.com/"><i class="fa-brands fa-dribbble"></i></a>
         </div>
     </div>
     <div class="freelancer">
