--- a/index.htm
+++ b/index.htm
@@ -91,7 +91,10 @@
         </div>
     </div>
 </footer>
-<p>Copyright &copy; Your Website 2020</p>
+<div class="copy">
+    <p>Copyright &copy; Your Website 2020</p>
+</div>
+
 
 
     <script src="https://kit.fontawesome.com/928f848d89.js" crossorigin="anonymous"></script>
