--- a/index.htm
+++ b/index.htm
@@ -35,12 +35,12 @@
     <section id="portfolio">
         <div class="p-titre"><H2>PORTFOLIO</H2></div>
         <div class="images">
-            <img src="/img/portfolio/cabin.png" alt="">
-            <img src="/img/portfolio/cake.png" alt="">
-            <img src="/img/portfolio/circus.png" alt="">
-            <img src="/img/portfolio/game.png" alt="">
-            <img src="/img/portfolio/safe.png" alt="">
-            <img src="/img/portfolio/submarine.png" alt="">
+            <img src="./img/portfolio/cabin.png" alt="">
+            <img src="./img/portfolio/cake.png" alt="">
+            <img src="./img/portfolio/circus.png" alt="">
+            <img src="./img/portfolio/game.png" alt="">
+            <img src="./img/portfolio/safe.png" alt="">
+            <img src="./img/portfolio/submarine.png" alt="">
         </div>
     </section>
     <section id="about">
